mobile/desktop zone type in entity

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -47,6 +47,7 @@ doctrine:
         charset:  UTF8
         types:
             bannertype: Hyper\AdsBundle\DBAL\BannerType
+            zonetype: Hyper\AdsBundle\DBAL\ZoneType
 
     orm:
         auto_generate_proxy_classes: %kernel.debug%
