--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -26,6 +26,10 @@ fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
 
+default:
+    resource: "@HyperAdsBundle/Controller/DefaultController.php"
+    type: annotation
+
 admin_advertiser:
     resource: "@HyperAdsBundle/Controller/AdvertiserController.php"
     prefix: /admin/advertiser
