--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,14 @@
         "php": ">=5.3.3",
         "symfony/symfony": "2.1.*",
         "doctrine/orm": ">=2.2.3,<2.4-dev",
-        "doctrine/doctrine-bundle": "dev-master",
-        "twig/extensions": "dev-master",
-        "symfony/assetic-bundle": "dev-master",
-        "symfony/swiftmailer-bundle": "dev-master",
-        "symfony/monolog-bundle": "dev-master",
-        "sensio/distribution-bundle": "dev-master",
-        "sensio/framework-extra-bundle": "dev-master",
-        "sensio/generator-bundle": "dev-master",
+        "doctrine/doctrine-bundle": ">=2.1",
+        "twig/extensions": "1.0.x-dev",
+        "symfony/assetic-bundle": "v2.1.0-RC2",
+        "symfony/swiftmailer-bundle": "v2.1.0-RC2",
+        "symfony/monolog-bundle": "v2.1.0-RC2",
+        "sensio/distribution-bundle": "2.2.x-dev",
+        "sensio/framework-extra-bundle": "2.1.x-dev",
+        "sensio/generator-bundle": "2.1.x-dev",
         "jms/security-extra-bundle": "1.2.*",
         "jms/di-extra-bundle": "1.1.*",
         "friendsofsymfony/user-bundle": "*"
