some changes that - I hope - ends with Banner-Zone configuration

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -50,6 +50,11 @@ admin_zone:
     prefix: /admin/zone
     type: annotation
 
+admin_banner_config:
+    resource: "@HyperAdsBundle/Controller/BannerConfigController.php"
+    prefix: /admin/banner-config
+    type: annotation
+
 admin_banner:
     resource: "@HyperAdsBundle/Controller/BannerController.php"
     prefix: /admin/banner
