move banner widget macro to view

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -22,5 +22,6 @@ monolog:
 assetic:
     use_controller: true
 
-#swiftmailer:
-#    delivery_address: me@example.com
+swiftmailer:
+    delivery_address: %mailer_delivery%
+
