remove sessions from head|frame|click and fix of composer.json

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -15,6 +15,11 @@ security:
             id: fos_user.user_provider.username
 
     firewalls:
+        ads:
+            pattern: ^/(head|click|frame)
+            stateless: true
+            anonymous: true
+
         main:
             pattern: ^/
             form_login:
