--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -57,7 +57,16 @@ doctrine:
 fos_user:
     db_driver: orm
     firewall_name: main
-    user_class: Hyper\AdsBundle\Entity\User
+    user_class: Hyper\AdsBundle\Entity\Advertiser
+    from_email:
+        address: %mailer_from%
+        sender_name: %mailer_sender%
+    registration:
+        confirmation:
+            enabled: true
+
+jms_payment_core:
+    secret: %payments_secret%
 
 services:
     stats_collector:
