--- a/src/Wikp/PaymentMtgoxBundle/Resources/config/services.yml
+++ b/src/Wikp/PaymentMtgoxBundle/Resources/config/services.yml
@@ -1,5 +1,6 @@
 parameters:
     wikp_payment_mtgox.class: Wikp\PaymentMtgoxBundle\Mtgox\Client
+    wikp_payment_mtgox.plugin.class: Wikp\PaymentMtgoxBundle\Plugin\MtgoxPaymentPlugin
     wikp_payment_mtgox.api_key: ~
     wikp_payment_mtgox.api_secret: ~
     wikp_payment_mtgox.return_url: null
@@ -10,3 +11,7 @@ services:
     wikp_payment_mtgox.client:
         class: %wikp_payment_mtgox.class%
         arguments: [%wikp_payment_mtgox.api_key%, %wikp_payment_mtgox.api_secret%]
+
+    wikp_payment_mtgox.plugin:
+        class: %wikp_payment_mtgox.plugin.class%
+        arguments: [%wikp_payment_mtgox.return_url%, %wikp_payment_mtgox.cancel_url%, @wikp_payment_mtgox.client]
