--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -5,6 +5,9 @@ imports:
 wikp_payment_mtgox:
     api_key: %mtgox_api_key%
     api_secret: %mtgox_api_secret%
+    return_url: http://dupa.com/
+    cancel_url: http://dupa.com/
+    order_repository_path: "HyperAdsBundle:Order"
     debug: %kernel.debug%
 
 framework:
