--- a/src/Wikp/PaymentMtgoxBundle/Resources/config/routing.yml
+++ b/src/Wikp/PaymentMtgoxBundle/Resources/config/routing.yml
@@ -1,3 +1,5 @@
 wikp_payment_mtgox_ipn:
     pattern:  /ipn
     defaults: { _controller: WikpPaymentMtgoxBundle:Ipn:index }
+    requirements:
+        _method: POST
