--- a/app/config/parameters_example.yml
+++ b/app/config/parameters_example.yml
@@ -18,3 +18,8 @@ parameters:
 
     locale:            pl
     secret:            0724ebb222af8866b7d7a2524451219b
+
+    session_memcache_host: 127.0.0.1
+    session_memcache_port: 11211
+    session_memcache_prefix: "acid_"
+    session_memcache_expire: 3600
