--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,6 +1,11 @@
 imports:
     - { resource: config.yml }
 
+doctrine:
+    orm:
+        metadata_cache_driver: apc
+        query_cache_driver: apc
+
 monolog:
     handlers:
         main:
