default currency in profile

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,6 +71,9 @@ fos_user:
     from_email:
         address: %mailer_from%
         sender_name: %mailer_sender%
+    profile:
+        form:
+            type: hyper_user_editprofile
     registration:
         confirmation:
             enabled: true
