--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "jms/di-extra-bundle": "1.1.*",
         "jms/payment-core-bundle": "master-dev",
         "friendsofsymfony/user-bundle": "2.0.*@dev",
-        "exercise/htmlpurifier-bundle": "dev-master"
+        "exercise/htmlpurifier-bundle": "dev-master",
+        "Trsteel/ckeditor-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
