--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 composer.phar
 web/uploads/*
 web/components/*
+node_modules/
 !web/components/.gitkeep
 !web/uploads/.gitkeep
 app/config/parameters.*
