--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "jms/payment-core-bundle": "master-dev",
         "friendsofsymfony/user-bundle": "2.0.*@dev",
         "exercise/htmlpurifier-bundle": "dev-master",
-        "Trsteel/ckeditor-bundle": "dev-master"
+        "Trsteel/ckeditor-bundle": "dev-master",
+        "wikp/payment-mtgox-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
