--- a/composer.json
+++ b/composer.json
@@ -35,11 +35,7 @@
         "friendsofsymfony/user-bundle": "2.0.*@dev",
         "exercise/htmlpurifier-bundle": "dev-master",
         "Trsteel/ckeditor-bundle": "dev-master",
-        "wikp/payment-mtgox-bundle": "dev-master",
-        "jms/metadata": "1.2.*@dev",
-        "friendsofsymfony/rest-bundle": "0.12.*@dev",
-		"jms/serializer-bundle": "0.12.*@dev",
-		"jms/serializer": "0.12.*@dev"
+        "wikp/payment-mtgox-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
