--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "jms/payment-core-bundle": "master-dev",
         "friendsofsymfony/user-bundle": "2.0.*@dev",
         "exercise/htmlpurifier-bundle": "dev-master",
-        "Trsteel/ckeditor-bundle": "dev-master",
+        "trsteel/ckeditor-bundle": "dev-master",
         "wikp/payment-mtgox-bundle": "dev-master"
     },
     "scripts": {
