--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Hyper": "src/" ,
-            "Wikp": "src/"
+            "Hyper": "src/"
         }
     },
     "require": {
