E-mails are now sent in case of adding/editing announcements

--- a/app/config/parameters_example.yml
+++ b/app/config/parameters_example.yml
@@ -34,3 +34,7 @@ parameters:
     application_memcache_prefix: "acid_"
 
     max_one_banner_days: 365
+
+    announcement_flow_mail_recipients:
+        - "mail@example.com"
+        - "another-mail@example.com"
