memcache in requirements list and corresponding info in README

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     },
     "require": {
         "php": ">=5.3.3",
+        "ext-memcache": "*",
         "symfony/symfony": "2.2.*",
         "doctrine/orm": ">=2.2.3,<2.4-dev",
         "doctrine/doctrine-bundle": "1.2.*",
