expire announcements task refactor

--- a/app/config/parameters_example.yml
+++ b/app/config/parameters_example.yml
@@ -35,6 +35,8 @@ parameters:
 
     max_one_banner_days: 365
     announcement_expire_days: 10 # if announcement is not edited for {announcement_expire_days}, it will be marked as expired by acid:task:expire-announcements
+    announcement_edit_cost: 0.01
+    announcement_edit_currency: PLN
 
     announcement_flow_mail_recipients:
         - "mail@example.com"
