--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,9 @@
+before_commands:
+    - "composer install --prefer-source"
 tools:
     php_code_coverage:
         enabled: true
+        test_command: phpunit -c app/phpunit.xml.dist
         filter:
             excluded_paths:
                 - vendor
@@ -44,4 +47,4 @@ tools:
                 - vendor
                 - web
                 - app/cache
-    sensiolabs_security_checker: true
+    sensiolabs_security_checker: false
