--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,5 +1,5 @@
 before_commands:
-    - "composer install --prefer-source"
+    - "composer install --prefer-dist"
 tools:
     php_code_coverage:
         enabled: true
