--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,8 +1,8 @@
-before_commands:
-    - "composer install --prefer-dist"
+#before_commands:
+#    - "composer install --prefer-dist"
 tools:
     php_code_coverage:
-        enabled: true
+        enabled: false
         test_command: phpunit -c app/phpunit.xml.dist
         filter:
             excluded_paths:
