--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -7,6 +7,14 @@ monolog:
             type:         fingers_crossed
             action_level: error
             handler:      nested
+            channels: ["!security"]
+            exclude_404s:
+                - ^/frame
+        security:
+            type: stream
+            path: %kernel.logs_dir%/%kernel.environment%.security.log
+            level: warning
+            channels: ["security"]
         nested:
             type:  stream
             path:  %kernel.logs_dir%/%kernel.environment%.log
