--- a/composer.json
+++ b/composer.json
@@ -20,25 +20,27 @@
     "require": {
         "php": ">=5.3.3",
         "ext-memcache": "*",
-        "symfony/symfony": "2.2.*",
-        "doctrine/orm": ">=2.2.3,<2.4-dev",
-        "doctrine/doctrine-bundle": "1.2.*",
-        "twig/extensions": "1.0.*",
-        "symfony/swiftmailer-bundle": "2.2.*",
-        "symfony/monolog-bundle": "2.2.*",
-        "sensio/distribution-bundle": "2.2.*",
-        "sensio/framework-extra-bundle": "2.2.*",
-        "sensio/generator-bundle": "2.2.*",
-        "jms/security-extra-bundle": "1.4.*",
-        "jms/di-extra-bundle": "1.3.*",
-        "jms/payment-core-bundle": "master-dev",
+
+        "symfony/symfony": "~2.4",
+        "doctrine/orm": "~2.2,>=2.2.3",
+        "doctrine/doctrine-bundle": "~1.2",
+        "twig/extensions": "~1.0",
+        "symfony/assetic-bundle": "~2.3",
+        "symfony/swiftmailer-bundle": "~2.3",
+        "symfony/monolog-bundle": "~2.4",
+        "sensio/distribution-bundle": "~2.3",
+        "sensio/framework-extra-bundle": "~3.0",
+        "sensio/generator-bundle": "~2.3",
+        "incenteev/composer-parameter-handler": "~2.0",
+
+        "jms/security-extra-bundle": "1.5.*",
+        "jms/payment-core-bundle": "1.0.*@dev",
         "friendsofsymfony/user-bundle": "2.0.*@dev",
-        "exercise/htmlpurifier-bundle": "dev-master",
-        "trsteel/ckeditor-bundle": "dev-master",
+        "exercise/htmlpurifier-bundle": "1.0.*@dev",
+        "trsteel/ckeditor-bundle": "1.4.*@dev",
         "omnipay/bitpay": "2.0.*@dev"
     },
 	"require-dev": {
-		"phake/phake": "2.0.*@dev"
 	},
     "scripts": {
         "post-install-cmd": [
