--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,20 @@
 #before_commands:
 #    - "composer install --prefer-dist"
 tools:
+    php_analyzer:
+        enabled: true
+        filter:
+            excluded_paths:
+                - vendor
+                - web
+                - app/cache
+        config:
+            checkstyle:
+                enabled: true
+            verify_php_doc_comments:
+                enabled: true
+            loops_must_use_braces:
+                enabled: true
     php_code_coverage:
         enabled: false
         test_command: phpunit -c app/phpunit.xml.dist
@@ -37,14 +51,6 @@ tools:
                 - vendor
                 - web
                 - app/cache
-
     php_pdepend:
         enabled: true
-    php_analyzer:
-        enabled: true
-        filter:
-            excluded_paths:
-                - vendor
-                - web
-                - app/cache
     sensiolabs_security_checker: false
