--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -122,6 +122,6 @@ hyper_ads:
             api_key: %bitpay_api_key%
             full_notifications: %bitpay_full_notifications%
             notifications_email: %bitpay_notifications_email%
-            transaction_speed: "low"
+            transaction_speed: %bitpay_transaction_speed%
     order_hash_key: %payment_hash_key%
     order_hash_algorithm: %payment_hash_algorithm%
