--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -118,7 +118,7 @@ services:
 hyper_ads:
     payment_gateways:
         bitpay:
-            name: BitPay
+            name: \Hyper\AdsBundle\Payment\BitPay\Gateway
             api_key: %bitpay_api_key%
             full_notifications: %bitpay_full_notifications%
             notifications_email: %bitpay_notifications_email%
