--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -22,7 +22,8 @@ tools:
             excluded_paths:
                 - vendor
                 - web
-                - app/cache
+                - app
+                - bin
     php_code_sniffer:
         enabled: true
         config:
@@ -31,26 +32,30 @@ tools:
             excluded_paths:
                 - vendor
                 - web
-                - app/cache
+                - app
+                - bin
     php_cpd:
         enabled: true
         excluded_dirs:
             - vendor
             - web
-            - app/cache
+            - app
+            - bin
     php_loc:
         enabled: true
         excluded_dirs:
             - vendor
             - web
-            - app/cache
+            - app
+            - bin
     php_mess_detector:
         enabled: true
         filter:
             excluded_paths:
                 - vendor
                 - web
-                - app/cache
+                - app
+                - bin
     php_pdepend:
         enabled: true
     sensiolabs_security_checker: false
