Price of a banner based on number of active banners in zone

--- a/app/config/parameters_example.yml
+++ b/app/config/parameters_example.yml
@@ -55,3 +55,5 @@ parameters:
     announcement_flow_mail_recipients:
         - "mail@example.com"
         - "another-mail@example.com"
+
+     banner_price_factor: 10 # %
