--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -116,6 +116,7 @@ services:
         arguments: [ @session.memcache, { prefix: %session_memcache_prefix%, expiretime: %session_memcache_expire% } ]
 
 hyper_ads:
+    large_price_factor: %banner_price_factor%
     payment_gateways:
         bitpay:
             name: \Hyper\AdsBundle\Payment\BitPay\Gateway
