max_banners_in_zone is now configurable

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -117,6 +117,7 @@ services:
 
 hyper_ads:
     large_price_factor: %banner_price_factor%
+    max_banners_in_zone: %max_banners_in_zone%
     payment_gateways:
         bitpay:
             name: \Hyper\AdsBundle\Payment\BitPay\Gateway
