--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -120,10 +120,14 @@ hyper_ads:
     max_banners_in_zone: %max_banners_in_zone%
     payment_gateways:
         bitpay:
-            name: \Hyper\AdsBundle\Payment\BitPay\Gateway
+            name: \Hyper\AdsBundle\Payment\BitPay\Gateway\BitPayGateway
             api_key: %bitpay_api_key%
             full_notifications: %bitpay_full_notifications%
             notifications_email: %bitpay_notifications_email%
             transaction_speed: %bitpay_transaction_speed%
+        electrum:
+            name: \Hyper\AdsBundle\Payment\Electrum\Gateway\ElectrumGateway
+            endpoint: %electrum_endpoint%
+            expiration: %electrum_expiration%
     order_hash_key: %payment_hash_key%
     order_hash_algorithm: %payment_hash_algorithm%
