--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "ext-memcache": "*",
 
         "symfony/symfony": "~2.4",
-        "doctrine/orm": "~2.2,>=2.2.3",
+        "doctrine/orm": "~2.4",
         "doctrine/doctrine-bundle": "~1.2",
         "twig/extensions": "~1.0",
         "symfony/assetic-bundle": "~2.3",
